--- a/app/src/main/res/layout-v31/fragment_compose2.xml
+++ b/app/src/main/res/layout-v31/fragment_compose2.xml
@@ -14,19 +14,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:backgroundTint="@android:color/system_neutral2_700"
         android:layout_marginTop="12dp"
-        android:visibility="invisible"
-        android:layout_centerHorizontal="true"/>
-
-
-
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/description_text_input"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_above="@id/btn_Submit"
-        android:visibility="invisible"/>
+        android:visibility="invisible" />
 
 
     <EditText
@@ -43,7 +34,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/et_Description"
-
+        android:layout_marginTop="10dp"
+        android:backgroundTint="@android:color/system_neutral2_700"
         android:text="Take Picture" />
 
     <ImageView
@@ -59,7 +51,7 @@
         android:id="@+id/btn_Submit"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-
+        android:backgroundTint="@android:color/system_neutral2_700"
         android:layout_alignParentBottom="true"
         android:text="Submit" />
 
