--- a/app/src/main/res/layout/activity_login2.xml
+++ b/app/src/main/res/layout/activity_login2.xml
@@ -8,19 +8,20 @@
     android:orientation="vertical"
     tools:context=".LoginActivity2">
 
+
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:ems="10"
-        android:layout_weight="1"
-        android:layout_marginEnd="20dp"
-        android:text="Instagram"
-        android:gravity="center_horizontal|center_vertical"
+        android:layout_centerInParent="true"
+        android:layout_marginStart="5dp"
         android:layout_marginTop="22dp"
-        android:layout_marginStart="110dp"
+        android:layout_marginEnd="20dp"
+        android:layout_weight="1"
+        android:ems="10"
         android:fontFamily="@font/fontecri"
-        android:textSize="30sp"/>
-
+        android:gravity="center_horizontal|center_vertical"
+        android:text="Instagram"
+        android:textSize="30sp" />
 
     <EditText
         android:id="@+id/etUsername"
