--- a/app/src/main/res/layout/item_post.xml
+++ b/app/src/main/res/layout/item_post.xml
@@ -4,16 +4,16 @@
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+   >
 
 
     <ImageView
         android:id="@+id/ettImage"
         android:layout_width="63dp"
         android:layout_height="52dp"
-        android:layout_below="@+id/toolbar"
         android:layout_marginStart="5dp"
-        android:layout_marginTop="34dp"
+        android:layout_marginTop="59dp"
         tools:srcCompat="@tools:sample/avatars" />
 
     <ImageView
@@ -22,71 +22,112 @@
         android:layout_height="214dp"
         android:layout_below="@id/ettImage"
         android:layout_centerInParent="true"
+        android:layout_centerHorizontal="true"
         android:layout_marginTop="113dp"
         tools:srcCompat="@tools:sample/avatars" />
 
+
+    <ImageButton
+        android:id="@+id/imgBtnHeart"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/imageView"
+        android:layout_marginStart="111dp"
+        android:layout_marginTop="-1dp"
+        android:backgroundTint="@color/white"
+        android:src="@drawable/heart"
+        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
+
+    <ImageButton
+        android:id="@+id/BtnComment"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/imageView"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="-3dp"
+        android:layout_toEndOf="@+id/imgBtnHeart"
+        android:backgroundTint="@color/white"
+
+        android:src="@drawable/ic_comment"
+        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
+
+    <ImageButton
+        android:id="@+id/imgBtnSend"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/imageView"
+        android:layout_marginStart="14dp"
+        android:layout_marginTop="-4dp"
+        android:layout_toEndOf="@+id/BtnComment"
+        android:backgroundTint="@color/white"
+        android:src="@drawable/ic_baseline"
+        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
+
+    <ImageButton
+        android:id="@+id/imgBtnSave"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/imageView"
+        android:layout_alignParentEnd="true"
+        android:layout_marginTop="5dp"
+        android:layout_marginEnd="10dp"
+        android:backgroundTint="@color/white"
+        android:src="@drawable/save"
+        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
+
     <TextView
         android:id="@+id/tName"
+        android:layout_alignParentEnd="true"
         android:layout_width="83dp"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/toolbar"
-        android:layout_alignParentEnd="true"
-        android:layout_marginStart="11dp"
-        android:layout_marginTop="32dp"
-        android:layout_marginEnd="249dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="52dp"
+        android:layout_marginEnd="252dp"
         android:layout_toEndOf="@+id/ettImage"
         android:fontFamily="sans-serif-medium"
         android:textSize="17sp"
         tools:text="Sarah42" />
 
+
     <TextView
         android:id="@+id/twStar"
         android:layout_width="44dp"
         android:layout_height="38dp"
-        android:layout_below="@+id/toolbar"
         android:layout_alignParentEnd="true"
         android:layout_marginStart="-40dp"
-        android:layout_marginTop="27dp"
-        android:layout_marginEnd="1dp"
+        android:layout_marginTop="44dp"
+        android:layout_marginEnd="12dp"
         android:drawableLeft="@drawable/ic_baseline_more" />
-
 
     <EditText
         android:id="@+id/description"
-        android:layout_width="344dp"
-        android:layout_height="wrap_content"
+        android:layout_width="320dp"
+        android:layout_height="75dp"
         android:layout_below="@id/imageView"
         android:layout_alignParentEnd="true"
-        android:layout_marginTop="83dp"
-        android:layout_marginEnd="19dp"
-        android:text="" />
+        android:layout_marginTop="27dp"
+        android:layout_marginEnd="49dp"
+        android:backgroundTint="@color/black"
+        android:text="description"
+        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
 
-    <com.google.android.material.bottomnavigation.BottomNavigationView
-        android:id="@+id/bottom_navigation"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        app:menu="@menu/menu_bottom_navigation" />
 
-    <androidx.appcompat.widget.Toolbar
-        android:id="@+id/toolbar"
-        android:layout_width="match_parent"
-        android:layout_height="67dp"
-        android:background="?attr/colorPrimary"
-        android:backgroundTint="@color/white"
-        android:minHeight="?attr/actionBarSize"
-        android:theme="?attr/actionBarTheme" />
 
     <TextView
-        android:id="@+id/instg"
-        android:layout_width="match_parent"
+        android:id="@+id/tvDescription"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="22dp"
-        android:layout_marginEnd="20dp"
-        android:fontFamily="@font/fontecri"
-        android:gravity="center"
-        android:text="Instagram"
-        android:textSize="20sp" />
+        android:layout_below="@+id/BtnComment"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="5dp"
+        tools:text="My headshot" />
 
+    <Space
+        android:layout_width="match_parent"
+        android:layout_height="30dp"
+        android:layout_below="@+id/tvDescription" />
 
 </RelativeLayout>
+
+
+
