--- a/app/src/main/res/layout/fragment_compose2.xml
+++ b/app/src/main/res/layout/fragment_compose2.xml
@@ -31,36 +31,59 @@
 
     <EditText
         android:id="@+id/et_Description"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/Loading"
-        android:layout_marginTop="10dp"
+        android:layout_width="327dp"
+        android:layout_height="266dp"
+        android:layout_above="@+id/btn_CaptureImage"
+        android:layout_below="@+id/iv_PosterImage"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginStart="63dp"
+        android:layout_marginTop="-200dp"
+        android:visibility = "gone"
+        android:layout_marginEnd="63dp"
+        android:layout_marginBottom="121dp"
         android:ems="10"
-        android:hint="Description" />
+        android:gravity="center" />
 
     <Button
         android:id="@+id/btn_CaptureImage"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/et_Description"
-
-        android:text="Take Picture" />
+        android:layout_width="165dp"
+        android:layout_height="77dp"
+        android:layout_above="@+id/btn_Submit"
+        android:layout_below="@+id/iv_PosterImage"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginStart="111dp"
+        android:layout_marginTop="510dp"
+        android:layout_marginEnd="111dp"
+        android:layout_marginBottom="33dp"
+        android:gravity="center"
+        android:text="Take Picture"
+        android:textSize="12sp" />
 
     <ImageView
         android:id="@+id/iv_PosterImage"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="256dp"
         android:layout_above="@+id/btn_Submit"
-        android:layout_below="@+id/btn_CaptureImage"
-        android:layout_marginTop="10dp"
+        android:layout_below="@+id/Loading"
+        android:layout_marginTop="70dp"
+        android:visibility = "gone"
+        android:layout_marginBottom="239dp"
         tools:srcCompat="@tools:sample/avatars" />
 
     <Button
         android:id="@+id/btn_Submit"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-
+        android:layout_width="165dp"
+        android:layout_height="77dp"
+        android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
+        android:layout_marginEnd="111dp"
+        android:visibility = "gone"
+        android:textSize="12sp"
+        android:layout_marginStart="111dp"
+        android:gravity="center"
+        android:layout_marginBottom="38dp"
         android:text="Submit" />
 
 
