--- a/app/src/main/res/layout/fragment_profile2.xml
+++ b/app/src/main/res/layout/fragment_profile2.xml
@@ -1,16 +1,76 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".profileFragment2">
 
+    <ImageView
+        android:id="@+id/ivProfile"
+        android:layout_width="90dp"
+        android:layout_height="90dp"
+        android:layout_marginStart="5dp"
+        android:layout_marginTop="5dp"
+        tools:src="@tools:sample/avatars" />
+
+    <TextView
+        android:id="@+id/tvUsername"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/ivProfile"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="1dp"
+        android:textSize="22sp"
+        android:textStyle="bold"
+        tools:text="Sarah" />
+
+    <ImageButton
+        android:id="@+id/btnEditProfile"
+        android:layout_width="200dp"
+        android:layout_height="47dp"
+        android:layout_above="@+id/btnLogout"
+        android:layout_alignTop="@+id/ivProfile"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginStart="106dp"
+
+        android:layout_marginTop="135dp"
+        android:layout_marginEnd="106dp"
+        android:layout_marginBottom="-62dp"
+        android:backgroundTint="@color/blue"
+        android:src="@drawable/ic_baseline_add_circle"
+        android:textAlignment="center" />
 
     <Button
-        android:id="@+id/btnLogut"
-        android:layout_width="350dp"
+        android:id="@+id/btnLogout"
+        android:layout_width="192dp"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:backgroundTint="@android:color/tertiary_text_light"
+        android:layout_below="@id/tvUsername"
+        android:layout_centerHorizontal="true"
+        android:layout_marginStart="106dp"
+        android:layout_marginTop="74dp"
+        android:layout_marginEnd="106dp"
+        android:layout_marginBottom="5dp"
+        android:backgroundTint="@color/vert"
         android:text="LOGOUT" />
+
+    <View
+        android:id="@+id/divider1"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_below="@id/btnLogout"
+        android:layout_marginTop="5dp"
+        android:layout_marginBottom="5dp"
+        android:background="?android:attr/listDivider" />
+
+    <GridView
+        android:id="@+id/gridView"
+        android:layout_width="match_parent"
+        android:layout_height="471dp"
+        android:layout_below="@+id/divider1"
+        android:layout_marginTop="1dp"
+        android:numColumns="2"
+        android:stretchMode="columnWidth" />
+
 </RelativeLayout>
