--- a/app/src/main/res/layout/toolbar.xml
+++ b/app/src/main/res/layout/toolbar.xml
@@ -1,4 +1,5 @@
 <androidx.appcompat.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -12,11 +13,12 @@
             android:id="@+id/et_Camera"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:src="@drawable/camera"
             android:layout_alignParentStart="true"
+            android:layout_centerVertical="true"
+            android:backgroundTint="@color/white"
 
-            android:backgroundTint="@color/white"/>
+            android:src="@drawable/camera"
+            tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
 
         <TextView
             android:id="@+id/text"
@@ -38,7 +40,8 @@
             android:layout_marginEnd="16dp"
             android:backgroundTint="@color/white"
 
-            android:src="@drawable/ic_baseline" />
+            android:src="@drawable/ic_baseline"
+            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck,TouchTargetSizeCheck" />
     </RelativeLayout>
 
 </androidx.appcompat.widget.Toolbar>
