--- a/app/src/main/res/menu/menu_bottom_navigation.xml
+++ b/app/src/main/res/menu/menu_bottom_navigation.xml
@@ -10,7 +10,7 @@
     <item
         android:id="@+id/action_plus"
         android:enabled="true"
-        android:icon="@drawable/plus_box_outline"
+        android:icon="@drawable/plus_box"
         android:title="Compose"
         app:showAsAction="ifRoom" />
     <item
