--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,10 +5,14 @@
     <color name="purple_700">#FF3700B3</color>
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
-    <color name="black">#FF000000</color>
+    <color name="gris">#4E4949</color>
     <color name="white">#FFFFFFFF</color>
     <color name="ocean">#007FFF</color>
+    <color name="blue">#0A64BF</color>
     <color name="vert">  #32CD32</color>
+    <color name="red">#DF2424</color>
+    <color name="black">#000000</color>
+
 
 
 </resources>
